Upgrade Infoway branch to latest parent version.  (#4)
* core 6.5.7 and #339

* Update documentation

* Improve the CI coverage

* Use the right PostgreSQL dialect with Hibernate in configurations

Fixes #321

* Validation GUI: handle non-200 codes with an OperationOutcome

Fixes #326

* Update the changelog

* Optimize the NpmPackageVersionResourceEntity update

Fixes #341

* Fix the .editorconfig

* Optimize NpmPackageIndexBuilder.seeFile

Fixes #342

* patch #344

* #345 fix document validation

* server: rebuild the Angular GUI resources

* release 3.9.12

* Update Github workflows

* Inject the GUI version in the server

Fixes #346

* support for bundle option #348

* update core to 6.5.9

* json security

* validate composition #348

* remove NpmPackageIndexBuilder

* update changelog

* copilot fix

* fix np

* Use FhirTerser to simplify multi-version field accesses

* Validation: hide primitive/complex datatypes and logical models

Fixes #352

* Fix handling of the hl7.fhir.uv.extensions packages

Fixes #343

* Only disable FhirXVersTests on GitHub Actions

* Upgrade to HAPI 8.0.0 and FHIR Core 6.5.15

* Remove unneeded overridden classes

* Upgrade and clean dependencies

* Update the changelog

* Enhance code

* Fix the FHIR classes patching

* 4.0.0

* tag also latest

* update docs

* Fix handling of UTF-8 content in the validator GUI #363

Fixes #363

* add testcase for resolve() in Bundle

* PoC: support resolve() for references in Bundle

* fix NPE

* improve testcase

* use validationhostservices for resolve #361

* use uuid too

* update changelog

* Fix base64 resource in URL #363

* Reformat code

* Rebuild frontend

* update to 6.5.17

* refactor slicing

* #348 add validation info

* add ai analyze components to frontend

* implement logic for ai analyze

* add ai analysis as extension parameter

* display markdown validation results correctly

* add details to ai results

* remove ai analyze button and ai result tab

* add openai api key to app