@@ -1,21 +1,41 @@
 package ch.ahdis.matchbox.providers;
 
-import java.nio.charset.StandardCharsets;
-import java.util.*;
-import java.util.stream.Collectors;
-
+import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.i18n.Msg;
+import ca.uhn.fhir.jpa.api.dao.DaoRegistry;
+import ca.uhn.fhir.jpa.binary.api.IBinaryStorageSvc;
+import ca.uhn.fhir.jpa.dao.data.INpmPackageVersionResourceDao;
+import ca.uhn.fhir.jpa.model.entity.NpmPackageVersionResourceEntity;
+import ca.uhn.fhir.model.api.Include;
+import ca.uhn.fhir.model.api.annotation.Description;
+import ca.uhn.fhir.rest.annotation.*;
+import ca.uhn.fhir.rest.api.*;
+import ca.uhn.fhir.rest.api.server.IBundleProvider;
+import ca.uhn.fhir.rest.api.server.RequestDetails;
+import ca.uhn.fhir.rest.param.TokenAndListParam;
+import ca.uhn.fhir.rest.param.UriAndListParam;
+import ca.uhn.fhir.rest.server.IResourceProvider;
+import ca.uhn.fhir.rest.server.SimpleBundleProvider;
+import ca.uhn.fhir.rest.server.exceptions.MethodNotAllowedException;
+import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
 import ch.ahdis.matchbox.CliContext;
+import ch.ahdis.matchbox.engine.MatchboxEngine;
+import ch.ahdis.matchbox.engine.exception.MatchboxUnsupportedFhirVersionException;
+import ch.ahdis.matchbox.util.CrossVersionResourceUtils;
 import ch.ahdis.matchbox.util.MatchboxEngineSupport;
 import ch.ahdis.matchbox.util.MatchboxServerUtils;
+import ch.ahdis.matchbox.util.http.MatchboxFhirFormat;
 import jakarta.servlet.http.HttpServletRequest;
-
-import ch.ahdis.matchbox.engine.exception.MatchboxUnsupportedFhirVersionException;
+import jakarta.servlet.http.HttpServletResponse;
 import org.hl7.fhir.convertors.factory.VersionConvertorFactory_40_50;
 import org.hl7.fhir.convertors.factory.VersionConvertorFactory_43_50;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IDomainResource;
 import org.hl7.fhir.instance.model.api.IIdType;
-import org.hl7.fhir.r4.model.*;
+import org.hl7.fhir.r4.model.MetadataResource;
+import org.hl7.fhir.r5.model.BooleanType;
+import org.hl7.fhir.r5.model.CanonicalType;
+import org.hl7.fhir.r5.model.StringType;
 import org.quartz.DisallowConcurrentExecution;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -23,39 +43,10 @@ import org.springframework.data.domain.Slice;
 import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.support.TransactionTemplate;
 
-import ca.uhn.fhir.context.FhirContext;
-import ca.uhn.fhir.i18n.Msg;
-import ca.uhn.fhir.jpa.api.dao.DaoRegistry;
-import ca.uhn.fhir.jpa.binary.api.IBinaryStorageSvc;
-import ca.uhn.fhir.jpa.dao.data.INpmPackageVersionResourceDao;
-import ca.uhn.fhir.jpa.model.entity.NpmPackageVersionResourceEntity;
-import ca.uhn.fhir.jpa.starter.AppProperties;
-import ca.uhn.fhir.model.api.Include;
-import ca.uhn.fhir.model.api.annotation.Description;
-import ca.uhn.fhir.rest.annotation.ConditionalUrlParam;
-import ca.uhn.fhir.rest.annotation.Create;
-import ca.uhn.fhir.rest.annotation.IdParam;
-import ca.uhn.fhir.rest.annotation.IncludeParam;
-import ca.uhn.fhir.rest.annotation.OptionalParam;
-import ca.uhn.fhir.rest.annotation.RawParam;
-import ca.uhn.fhir.rest.annotation.Read;
-import ca.uhn.fhir.rest.annotation.ResourceParam;
-import ca.uhn.fhir.rest.annotation.Search;
-import ca.uhn.fhir.rest.annotation.Sort;
-import ca.uhn.fhir.rest.annotation.Update;
-import ca.uhn.fhir.rest.api.SearchContainedModeEnum;
-import ca.uhn.fhir.rest.api.SearchTotalModeEnum;
-import ca.uhn.fhir.rest.api.SortSpec;
-import ca.uhn.fhir.rest.api.SummaryEnum;
-import ca.uhn.fhir.rest.api.server.RequestDetails;
-import ca.uhn.fhir.rest.param.TokenAndListParam;
-import ca.uhn.fhir.rest.param.UriAndListParam;
-import ca.uhn.fhir.rest.server.SimpleBundleProvider;
-import ca.uhn.fhir.rest.server.exceptions.MethodNotAllowedException;
-import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
-import ch.ahdis.matchbox.engine.MatchboxEngine;
-import ca.uhn.fhir.rest.api.MethodOutcome;
-import ca.uhn.fhir.rest.server.IResourceProvider;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static ch.ahdis.matchbox.util.MatchboxServerUtils.addExtension;
 
@@ -64,9 +55,6 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 
 	@Autowired
 	protected MatchboxEngineSupport matchboxEngineSupport;
-
-	@Autowired
-	AppProperties appProperties;
 
 	@Autowired
 	private INpmPackageVersionResourceDao myPackageVersionResourceDao;
@@ -102,102 +90,273 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 	}
 
 	@Search(allowUnknownParams = true)
-	public ca.uhn.fhir.rest.api.server.IBundleProvider search(jakarta.servlet.http.HttpServletRequest theServletRequest,
-			jakarta.servlet.http.HttpServletResponse theServletResponse,
-
-			ca.uhn.fhir.rest.api.server.RequestDetails theRequestDetails,
-
-			@Description(shortDefinition = "The ID of the resource") @OptionalParam(name = "_id") TokenAndListParam the_id,
-
-			@Description(shortDefinition = "The uri that identifies the conformance resource") @OptionalParam(name = "url") UriAndListParam theUrl,
-
-			@Description(shortDefinition = "The business version of the conformance resource") @OptionalParam(name = "version") TokenAndListParam theCanonicalVersion,
-
-			@RawParam Map<String, List<String>> theAdditionalRawParams,
-
-			@IncludeParam Set<Include> theIncludes,
-
-			@IncludeParam(reverse = true) Set<Include> theRevIncludes,
-
-			@Sort SortSpec theSort,
-
-			@ca.uhn.fhir.rest.annotation.Count Integer theCount,
-
-			@ca.uhn.fhir.rest.annotation.Offset Integer theOffset,
-
-			SummaryEnum theSummaryMode,
-
-			SearchTotalModeEnum theSearchTotalMode,
-
-			SearchContainedModeEnum theSearchContainedMode
-
-	) {
+	public IBundleProvider search(HttpServletRequest theServletRequest,
+											HttpServletResponse theServletResponse,
+											RequestDetails theRequestDetails,
+											@Description(shortDefinition = "The ID of the resource") @OptionalParam(name = "_id") TokenAndListParam the_id,
+											@Description(shortDefinition = "The uri that identifies the conformance resource") @OptionalParam(name = "url") UriAndListParam theUrl,
+											@Description(shortDefinition = "The business version of the conformance resource") @OptionalParam(name = "version") TokenAndListParam theCanonicalVersion,
+											@RawParam Map<String, List<String>> theAdditionalRawParams,
+											@IncludeParam Set<Include> theIncludes,
+											@IncludeParam(reverse = true) Set<Include> theRevIncludes,
+											@Sort SortSpec theSort,
+											@ca.uhn.fhir.rest.annotation.Count Integer theCount,
+											@ca.uhn.fhir.rest.annotation.Offset Integer theOffset,
+											SummaryEnum theSummaryMode,
+											SearchTotalModeEnum theSearchTotalMode,
+											SearchContainedModeEnum theSearchContainedMode
+	) throws IOException {
+		final var httpWrapper = this.matchboxEngineSupport.createWrapper(theServletRequest, theServletResponse);
 		if ("ImplementationGuide".equals(resourceType)) {
-			try {
-				return new TransactionTemplate(myTxManager).execute(tx -> {
-					final int offset = (theOffset == null ? 0 : theOffset.intValue());
-					final int count = (theCount == null ? 10000 : theCount.intValue());
-					Slice<NpmPackageVersionResourceEntity> outcome = null;
+			return new TransactionTemplate(myTxManager).execute(tx -> {
+				final int offset = (theOffset == null ? 0 : theOffset);
+				final int count = (theCount == null ? 10000 : theCount);
+				Slice<NpmPackageVersionResourceEntity> outcome = null;
 
-					if (the_id != null) {
-						String pid = the_id.getValuesAsQueryTokens().get(0).getValuesAsQueryTokens().get(0).getValue();
-						outcome = myPackageVersionResourceDao.findByResourceTypeById(PageRequest.of(offset, count),
-								resourceType,
-								Long.parseLong(pid));
-					} else {
-						if (theUrl != null) {
-							String url = theUrl.getValuesAsQueryTokens().get(0).getValuesAsQueryTokens().get(0).getValue();
-							if (theCanonicalVersion != null) {
-								String canonicalVersion = theCanonicalVersion.getValuesAsQueryTokens().get(0)
-										.getValuesAsQueryTokens().get(0).getValue();
-								outcome = myPackageVersionResourceDao.findByResourceTypeByCanonicalByCanonicalVersion(
-										PageRequest.of(offset, count), resourceType, url, canonicalVersion);
-							} else {
-								outcome = myPackageVersionResourceDao
-										.findByResourceTypeByCanoncial(PageRequest.of(offset, count), resourceType, url);
-							}
+				if (the_id != null) {
+					String pid = the_id.getValuesAsQueryTokens().getFirst().getValuesAsQueryTokens().getFirst().getValue();
+					outcome = myPackageVersionResourceDao.findByResourceTypeById(PageRequest.of(offset, count),
+																									 resourceType,
+																									 Long.parseLong(pid));
+				} else {
+					if (theUrl != null) {
+						String url = theUrl.getValuesAsQueryTokens().getFirst().getValuesAsQueryTokens().getFirst().getValue();
+						if (theCanonicalVersion != null) {
+							String canonicalVersion = theCanonicalVersion.getValuesAsQueryTokens().getFirst()
+								.getValuesAsQueryTokens().getFirst().getValue();
+							outcome = myPackageVersionResourceDao.findByResourceTypeByCanonicalByCanonicalVersion(
+								PageRequest.of(offset, count), resourceType, url, canonicalVersion);
 						} else {
-							outcome = myPackageVersionResourceDao.findByResourceType(PageRequest.of(offset, count),
-									resourceType);
+							outcome = myPackageVersionResourceDao
+								.findByResourceTypeByCanoncial(PageRequest.of(offset, count), resourceType, url);
 						}
+					} else {
+						outcome = myPackageVersionResourceDao.findByResourceType(PageRequest.of(offset, count),
+																									resourceType);
 					}
-
-					SimpleBundleProvider bundleProvider = new SimpleBundleProvider(
-							outcome.stream().map(t -> loadPackageEntityAdjustId(t)).collect(Collectors.toList()));
-					bundleProvider.setCurrentPageOffset(offset);
-					bundleProvider.setCurrentPageSize(count);
-					return bundleProvider;
-				});
-			} finally {
 				}
-		} 
-		
-		if (cliContext.getOnlyOneEngine()){
-			List<org.hl7.fhir.r5.model.Resource> resources = new ArrayList<org.hl7.fhir.r5.model.Resource>();
+
+				final var resources = outcome.stream().map(this::loadPackageEntityAdjustId).toList();
+				final SimpleBundleProvider bundleProvider = httpWrapper.makeBundleProvider(resources);
+				bundleProvider.setCurrentPageOffset(offset);
+				bundleProvider.setCurrentPageSize(count);
+				return bundleProvider;
+			});
+		}
+
+		if (cliContext.getOnlyOneEngine()) {
+			List<org.hl7.fhir.r5.model.Resource> resources = new ArrayList<>();
 			MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(null, cliContext,
-					false, false);
+																											false, false);
 			if (matchboxEngine != null) {
 
 				if (theUrl != null) {
 					String url = theUrl.getValuesAsQueryTokens().get(0).getValuesAsQueryTokens().get(0).getValue();
-					R5 r = matchboxEngine.getContext().fetchResource(classR5,url);
+					R5 r = matchboxEngine.getContext().fetchResource(classR5, url);
 					if (r != null)
 						resources.add(r);
 				} else {
 					resources.addAll(matchboxEngine.getContext().fetchResourcesByType(classR5));
 				}
 
-				switch (getFhirVersion(this.cliContext.getFhirVersion())) {
-					case "4.0.1": return new SimpleBundleProvider(
-						resources.stream().map(VersionConvertorFactory_40_50::convertResource).collect(Collectors.toList()));
-					case "4.3.0": return new SimpleBundleProvider(
-						resources.stream().map(VersionConvertorFactory_43_50::convertResource).collect(Collectors.toList()));
-					case "5.0.0": return new SimpleBundleProvider(
-						resources.stream().collect(Collectors.toList()));
-				}
+				return httpWrapper.makeBundleProviderFromR5(resources);
 			}
 		}
 		return null;
+	}
+
+	@Read(version = false)
+	public IBaseResource read(final HttpServletRequest theServletRequest,
+									  @IdParam final IIdType theId,
+									  final RequestDetails theRequestDetails) {
+		return new TransactionTemplate(myTxManager).execute(tx -> {
+			CliContext cliContext = new CliContext(this.cliContext);
+
+			final int offset = 0;
+			final int count = 1;
+			Slice<NpmPackageVersionResourceEntity> outcome = null;
+			outcome = myPackageVersionResourceDao.findByResourceTypeById(PageRequest.of(offset, count),
+																							 resourceType,
+																							 theId.getIdPartAsLong());
+			if (outcome != null && outcome.getSize() == 1) {
+				NpmPackageVersionResourceEntity res = outcome.toList().getFirst();
+				IBaseResource resource = (IBaseResource) loadPackageEntityAdjustId(outcome.toList().getFirst());
+				cliContext.setFhirVersion(getFhirVersion(resource));
+
+				String url = "null";
+				if (classR4.isInstance(resource)) {
+					R4 r = classR4.cast(resource);
+					url = r.getUrl();
+				}
+				if (classR4B.isInstance(resource)) {
+					R4B r = classR4B.cast(resource);
+					url = r.getUrl();
+				}
+				if (classR5.isInstance(resource)) {
+					R5 r = classR5.cast(resource);
+					url = r.getUrl();
+				}
+
+				// if is current we check if already loaded in a own engine and might be updated
+				// in the cache
+				if (res.getPackageVersion().isCurrentVersion() || cliContext.getOnlyOneEngine()) {
+					MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url,
+																													cliContext,
+																													false,
+																													false);
+					if (matchboxEngine != null) {
+						IBaseResource update = matchboxEngine.getCanonicalResource(url, getFhirVersion(resource));
+						if (update != null) {
+							return update;
+						}
+					}
+				}
+				return loadPackageEntityAdjustId(outcome.toList().getFirst());
+			} else {
+				return matchboxEngineSupport.getCachedResource(resourceType, theId.getIdPart());
+			}
+		});
+	}
+
+	@Create()
+	public MethodOutcome create(HttpServletRequest theRequest,
+										 @ResourceParam IBaseResource theResource,
+										 @ConditionalUrlParam String theConditional,
+										 RequestDetails theRequestDetails) {
+
+		String url = null;
+
+		CliContext cliContext = new CliContext(this.cliContext);
+		cliContext.setFhirVersion(theResource.getStructureFhirVersionEnum().getFhirVersionString());
+		if (cliContext.getOnlyOneEngine()) {
+
+			if (classR4.isInstance(theResource)) {
+				R4 r = classR4.cast(theResource);
+				url = r.getUrl();
+			}
+			if (classR4B.isInstance(theResource)) {
+				R4B r = classR4B.cast(theResource);
+				url = r.getUrl();
+			}
+			if (classR5.isInstance(theResource)) {
+				R5 r = classR5.cast(theResource);
+				url = r.getUrl();
+			}
+
+			if (url != null) {
+				MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext, true, false);
+				if (matchboxEngine == null) {
+					matchboxEngine = matchboxEngineSupport.getMatchboxEngine("default", cliContext, true, false);
+				}
+				if (matchboxEngine != null) {
+					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url,
+																																cliContext.getFhirVersion());
+					if (existing != null) {
+						theResource.setId(existing.getId());
+						matchboxEngine.dropResource(resourceType, existing.getId());
+					} else {
+						if (theResource.getIdElement().isEmpty()) {
+							theResource.setId(url.substring(url.lastIndexOf("/") + 1));
+						} else {
+							theResource.setId(theResource.getIdElement().getIdPart());
+						}
+					}
+					if (classR4.isInstance(theResource)) {
+						R4 r4 = classR4.cast(theResource);
+						r4.getMeta().setLastUpdated(new Date());
+						matchboxEngine.addCanonicalResource(r4);
+					}
+					if (classR4B.isInstance(theResource)) {
+						R4B r4b = classR4B.cast(theResource);
+						r4b.getMeta().setLastUpdated(new Date());
+						matchboxEngine.addCanonicalResource(r4b);
+					}
+					if (classR5.isInstance(theResource)) {
+						R5 r5 = classR5.cast(theResource);
+						r5.getMeta().setLastUpdated(new Date());
+						matchboxEngine.addCanonicalResource(r5);
+					}
+					MethodOutcome methodOutcome = new MethodOutcome();
+					methodOutcome.setCreated(true);
+					methodOutcome.setResource(theResource);
+					return methodOutcome;
+				}
+			}
+			throw new ResourceNotFoundException("matchbox engine not found for url " + url + " and fhir version " + cliContext.getFhirVersion());
+		} else {
+			throw new MethodNotAllowedException(
+				"Creating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
+		}
+	}
+
+	@Update
+	public MethodOutcome update(HttpServletRequest theRequest,
+										 @ResourceParam IDomainResource theResource,
+										 @IdParam IIdType theId,
+										 @ConditionalUrlParam String theConditional,
+										 RequestDetails theRequestDetails) {
+
+		String url = null;
+		CliContext cliContext = new CliContext(this.cliContext);
+		cliContext.setFhirVersion(getFhirVersion(theResource));
+		if (cliContext.getOnlyOneEngine()) {
+			if (classR4.isInstance(theResource)) {
+				R4 r = classR4.cast(theResource);
+				r.getMeta().setLastUpdated(new Date());
+				url = r.getUrl();
+			}
+			if (classR4B.isInstance(theResource)) {
+				R4B r = classR4B.cast(theResource);
+				r.getMeta().setLastUpdated(new Date());
+				url = r.getUrl();
+			}
+			if (classR5.isInstance(theResource)) {
+				R5 r = classR5.cast(theResource);
+				r.getMeta().setLastUpdated(new Date());
+				url = r.getUrl();
+			}
+
+			if (url != null) {
+				MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext, true, false);
+				if (matchboxEngine == null) {
+					matchboxEngine = matchboxEngineSupport.getMatchboxEngine("default", cliContext, true, false);
+				}
+				if (matchboxEngine != null) {
+					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url,
+																																cliContext.getFhirVersion());
+					if (existing != null) {
+						theResource.setId(existing.getId());
+						matchboxEngine.dropResource(resourceType, existing.getId());
+					} else {
+						if (theResource.getIdElement().isEmpty()) {
+							theResource.setId(url.substring(url.lastIndexOf("/") + 1));
+						} else {
+							theResource.setId(theResource.getIdElement().getIdPart());
+						}
+					}
+					if (classR4.isInstance(theResource)) {
+						R4 r4 = classR4.cast(theResource);
+						matchboxEngine.addCanonicalResource(r4);
+					}
+					if (classR4B.isInstance(theResource)) {
+						R4B r4b = classR4B.cast(theResource);
+						matchboxEngine.addCanonicalResource(r4b);
+					}
+					if (classR5.isInstance(theResource)) {
+						R5 r5 = classR5.cast(theResource);
+						matchboxEngine.addCanonicalResource(r5);
+					}
+					MethodOutcome methodOutcome = new MethodOutcome();
+					methodOutcome.setCreated(false);
+					methodOutcome.setResource(theResource);
+					return methodOutcome;
+				}
+			}
+			throw new ResourceNotFoundException("matchbox engine not found for url " + url + " and fhir version " + cliContext.getFhirVersion());
+		} else {
+			throw new MethodNotAllowedException(
+				"Updating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
+		}
 	}
 
 	/**
@@ -227,141 +386,21 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 							  .comparing(NpmPackageVersionResourceEntity::getCanonicalUrl)
 							  .thenComparing(NpmPackageVersionResourceEntity::getCanonicalVersion))
 				.map(entity -> {
-					final var canonical = new org.hl7.fhir.r5.model.CanonicalType(entity.getCanonicalUrl());
+					final var canonical = new CanonicalType(entity.getCanonicalUrl());
 					// Add custom extensions to the CanonicalType to store additional information
-					addExtension(canonical, "ig-id",
-									 new org.hl7.fhir.r5.model.StringType(entity.getPackageVersion().getPackageId()));
-					addExtension(canonical, "ig-version",
-									 new org.hl7.fhir.r5.model.StringType(entity.getCanonicalVersion()));
-					addExtension(canonical, "ig-current",
-									 new org.hl7.fhir.r5.model.BooleanType(currentEntityIds.contains(entity.getId())));
-					addExtension(canonical, "sd-canonical", new org.hl7.fhir.r5.model.StringType(entity.getCanonicalUrl()));
+					addExtension(canonical, "ig-id", new StringType(entity.getPackageVersion().getPackageId()));
+					addExtension(canonical, "ig-version", new StringType(entity.getCanonicalVersion()));
+					addExtension(canonical, "ig-current", new BooleanType(currentEntityIds.contains(entity.getId())));
+					addExtension(canonical, "sd-canonical", new StringType(entity.getCanonicalUrl()));
 					if (entity.getFilename() != null && !entity.getFilename().isBlank()) {
-						addExtension(canonical, "sd-title", new org.hl7.fhir.r5.model.StringType(entity.getFilename()));
+						addExtension(canonical, "sd-title", new StringType(entity.getFilename()));
 					} else {
-						addExtension(canonical, "sd-title", new org.hl7.fhir.r5.model.StringType(entity.getCanonicalUrl()));
+						addExtension(canonical, "sd-title", new StringType(entity.getCanonicalUrl()));
 					}
 					return canonical;
 				})
 				.toList();
 		});
-	}
-
-	public List<NpmPackageVersionResourceEntity> getPackageResources() {
-		return new TransactionTemplate(this.myTxManager).execute(tx -> {
-			return myPackageVersionResourceDao
-				.findByResourceType(PageRequest.of(0, 2147483646), resourceType).stream().toList();
-		});
-	}
-
-	public List<NpmPackageVersionResourceEntity> getCurrentPackageResources() {
-		return new TransactionTemplate(this.myTxManager).execute(tx -> {
-			return myPackageVersionResourceDao
-				.findCurrentByResourceType(PageRequest.of(0, 2147483646), resourceType).stream().toList();
-		});
-	}
-
-	protected IBaseResource loadPackageEntityAdjustId(NpmPackageVersionResourceEntity contents) {
-		IBaseResource resource = loadPackageEntity(contents);
-		if (resource != null) {
-			resource.setId(contents.getId());
-		}
-		return resource;
-	}
-
-	public org.hl7.fhir.r5.model.CanonicalResource getCanonical(IBaseResource theResource) {
-		if (classR4.isInstance(theResource)) {
-			R4 r4 = classR4.cast(theResource);
-			return (org.hl7.fhir.r5.model.CanonicalResource) VersionConvertorFactory_40_50.convertResource(r4);
-		}
-		if (classR4B.isInstance(theResource)) {
-			R4B r4b = classR4B.cast(theResource);
-			return (org.hl7.fhir.r5.model.CanonicalResource) VersionConvertorFactory_43_50.convertResource(r4b);
-		}
-		if (classR5.isInstance(theResource)) {
-			R5 r5 = classR5.cast(theResource);
-			return r5;
-		}
-		log.error("FHIR version not supported for resource "+theResource.fhirType()+": "+theResource.getIdElement().getIdPart()+ " : "+ theResource.getStructureFhirVersionEnum());
-		return null;
-	}
-
-	private IBaseResource loadPackageEntity(NpmPackageVersionResourceEntity contents) {
-		try {
-			final var binary = MatchboxServerUtils.getBinaryFromId(contents.getResourceBinary().getId(), myDaoRegistry);
-			final byte[] resourceContentsBytes = MatchboxServerUtils.fetchBlobFromBinary(binary, myBinaryStorageSvc,
-																												  myCtx);
-			final String resourceContents = new String(resourceContentsBytes, StandardCharsets.UTF_8);
-            return switch (contents.getFhirVersion()) {
-                case R4 -> new org.hl7.fhir.r4.formats.JsonParser().parse(resourceContents);
-                case R4B -> new org.hl7.fhir.r4b.formats.JsonParser().parse(resourceContents);
-                case R5 -> new org.hl7.fhir.r5.formats.JsonParser().parse(resourceContents);
-                default -> {
-                    log.error("FHIR version not support for loading form matchbox case ");
-                    throw new RuntimeException(Msg.code(1305) + "Failed to load package resource " + contents);
-                }
-            };
-		} catch (Exception e) {
-			throw new RuntimeException(Msg.code(1305) + "Failed to load package resource " + contents, e);
-		}
-	}
-
-	@Read(version = false)
-	public IBaseResource read(HttpServletRequest theServletRequest, @IdParam IIdType theId, RequestDetails theRequestDetails) {
-		try {
-			return new TransactionTemplate(myTxManager).execute(tx -> {
-
-				CliContext cliContext = new CliContext(this.cliContext);
-		
-				final int offset = 0;
-				final int count = 1;
-				Slice<NpmPackageVersionResourceEntity> outcome = null;
-				String pid = theId.getIdPart();
-				// check if pid is a long number
-				if (pid.matches("\\d+")) {
-					outcome = myPackageVersionResourceDao.findByResourceTypeById(PageRequest.of(offset, count),
-							resourceType,
-							Long.parseLong(pid));
-				}
-				if (outcome !=null && outcome.getSize() == 1) {
-					NpmPackageVersionResourceEntity res = outcome.toList().get(0);
-					IBaseResource resource = (IBaseResource) loadPackageEntityAdjustId(outcome.toList().get(0));
-					cliContext.setFhirVersion(getFhirVersion(resource));
-	
-					String url = "null";
-					if (classR4.isInstance(resource)) {
-						R4 r = classR4.cast(resource);
-						url = r.getUrl();
-					}
-					if (classR4B.isInstance(resource)) {
-						R4B r = classR4B.cast(resource);
-						url = r.getUrl();
-					}
-					if (classR5.isInstance(resource)) {
-						R5 r = classR5.cast(resource);
-						url = r.getUrl();
-					}
-			
-					// if is current we check if already loaded in a own engine and might be updated
-					// in the cache
-					if (res.getPackageVersion().isCurrentVersion() || cliContext.getOnlyOneEngine()) {
-						MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext,
-								false, false);
-						if (matchboxEngine != null) {
-							IBaseResource update = matchboxEngine.getCanonicalResource(url,getFhirVersion(resource));
-							if (update != null) {
-								return update;
-							}
-						}
-					}
-					return loadPackageEntityAdjustId(outcome.toList().get(0));
-				} else {
-					return matchboxEngineSupport.getCachedResource(resourceType, pid);
-				}
-			}
-			);
-		} finally {
-		}
 	}
 
 	public String getFhirVersion(IBaseResource theResource) {
@@ -381,134 +420,47 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 		return fhirVersionDetailed;
 	}
 
-	@Create()
-	public MethodOutcome create(HttpServletRequest theRequest, @ResourceParam IBaseResource theResource, @ConditionalUrlParam String theConditional, RequestDetails theRequestDetails) {
-
-		String url = null;
-
-		CliContext cliContext = new CliContext(this.cliContext);
-		cliContext.setFhirVersion(getFhirVersion(theResource));
-		if (cliContext.getOnlyOneEngine()) {
-
-			if (classR4.isInstance(theResource)) {
-				R4 r = classR4.cast(theResource);
-				url = r.getUrl();
-			}
-			if (classR4B.isInstance(theResource)) {
-				R4B r = classR4B.cast(theResource);
-				url = r.getUrl();
-			}
-			if (classR5.isInstance(theResource)) {
-				R5 r = classR5.cast(theResource);
-				url = r.getUrl();
-			}
-		
-			if (url != null) {
-				MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext, true, false);
-				if (matchboxEngine == null) {
-					matchboxEngine = matchboxEngineSupport.getMatchboxEngine("default", cliContext, true, false);
-				}
-				if (matchboxEngine != null) {
-					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url, cliContext.getFhirVersion());
-					if (existing != null) {
-						theResource.setId(existing.getId());
-						matchboxEngine.dropResource(resourceType, existing.getId());
-					} else {
-						if (theResource.getIdElement().isEmpty()) {
-							theResource.setId(url.substring(url.lastIndexOf("/") + 1));
-						}  else {
-							theResource.setId(theResource.getIdElement().getIdPart());
-						}
-					}
-					if (classR4.isInstance(theResource)) {
-						R4 r4 = classR4.cast(theResource);
-						r4.getMeta().setLastUpdated(new Date());
-						matchboxEngine.addCanonicalResource(r4);
-					}
-					if (classR4B.isInstance(theResource)) {
-						R4B r4b = classR4B.cast(theResource);
-						r4b.getMeta().setLastUpdated(new Date());
-						matchboxEngine.addCanonicalResource(r4b);
-					}
-					if (classR5.isInstance(theResource)) {
-						R5 r5 = classR5.cast(theResource);
-						r5.getMeta().setLastUpdated(new Date());
-						matchboxEngine.addCanonicalResource(r5);
-					}
-					MethodOutcome methodOutcome = new MethodOutcome();
-					methodOutcome.setCreated(true);
-					methodOutcome.setResource(theResource);
-					return methodOutcome;
-				}
-			}
-			throw new ResourceNotFoundException("matchbox engine not found for url " + url + " and fhir version " + cliContext.getFhirVersion());
-		} else {
-			throw new MethodNotAllowedException("Creating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
-		}
+	public List<NpmPackageVersionResourceEntity> getPackageResources() {
+		return new TransactionTemplate(this.myTxManager).execute(tx -> this.myPackageVersionResourceDao
+			.findByResourceType(PageRequest.of(0, 2147483646), resourceType).stream().toList()
+		);
 	}
 
-	@Update
-	public MethodOutcome update(HttpServletRequest theRequest,  @ResourceParam IDomainResource theResource,  @IdParam IIdType theId,
-		@ConditionalUrlParam String theConditional, RequestDetails theRequestDetails) {
+	protected IBaseResource loadPackageEntityAdjustId(final NpmPackageVersionResourceEntity contents) {
+		final IBaseResource resource = loadPackageEntity(contents);
+		if (resource != null) {
+			resource.setId(contents.getId());
+		}
+		return resource;
+	}
 
-		String url = null;
-		CliContext cliContext = new CliContext(this.cliContext);
-		cliContext.setFhirVersion(getFhirVersion(theResource));
-		if (cliContext.getOnlyOneEngine()) {
-			if (classR4.isInstance(theResource)) {
-				R4 r = classR4.cast(theResource);
-				r.getMeta().setLastUpdated(new Date());
-				url = r.getUrl();
-			}
-			if (classR4B.isInstance(theResource)) {
-				R4B r = classR4B.cast(theResource);
-				r.getMeta().setLastUpdated(new Date());
-				url = r.getUrl();
-			}
-			if (classR5.isInstance(theResource)) {
-				R5 r = classR5.cast(theResource);
-				r.getMeta().setLastUpdated(new Date());
-				url = r.getUrl();
-			}
+	public org.hl7.fhir.r5.model.CanonicalResource getCanonical(final IBaseResource theResource) {
+		if (classR4.isInstance(theResource)) {
+			R4 r4 = classR4.cast(theResource);
+			return (org.hl7.fhir.r5.model.CanonicalResource) VersionConvertorFactory_40_50.convertResource(r4);
+		}
+		if (classR4B.isInstance(theResource)) {
+			R4B r4b = classR4B.cast(theResource);
+			return (org.hl7.fhir.r5.model.CanonicalResource) VersionConvertorFactory_43_50.convertResource(r4b);
+		}
+		if (classR5.isInstance(theResource)) {
+			R5 r5 = classR5.cast(theResource);
+			return r5;
+		}
+		log.error("FHIR version not supported for resource " + theResource.fhirType() + ": " + theResource.getIdElement().getIdPart() + " : " + theResource.getStructureFhirVersionEnum());
+		return null;
+	}
 
-			if (url!=null) {
-				MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext, true, false);
-				if (matchboxEngine == null) {
-					matchboxEngine = matchboxEngineSupport.getMatchboxEngine("default", cliContext, true, false);
-				}
-				if (matchboxEngine != null) {
-					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url, cliContext.getFhirVersion());
-					if (existing != null) {
-						theResource.setId(existing.getId());
-						matchboxEngine.dropResource(resourceType, existing.getId());
-					} else {
-						if (theResource.getIdElement().isEmpty()) {
-							theResource.setId(url.substring(url.lastIndexOf("/") + 1));
-						}  else {
-							theResource.setId(theResource.getIdElement().getIdPart());
-						}
-					}
-					if (classR4.isInstance(theResource)) {
-						R4 r4 = classR4.cast(theResource);
-						matchboxEngine.addCanonicalResource(r4);
-					}
-					if (classR4B.isInstance(theResource)) {
-						R4B r4b = classR4B.cast(theResource);
-						matchboxEngine.addCanonicalResource(r4b);
-					}
-					if (classR5.isInstance(theResource)) {
-						R5 r5 = classR5.cast(theResource);
-						matchboxEngine.addCanonicalResource(r5);
-					}
-					MethodOutcome methodOutcome = new MethodOutcome();
-					methodOutcome.setCreated(false);
-					methodOutcome.setResource(theResource);
-					return methodOutcome;
-				}
-			}
-			throw new ResourceNotFoundException("matchbox engine not found for url " + url + " and fhir version " + cliContext.getFhirVersion());
-		} else {
-			throw new MethodNotAllowedException("Updating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
+	private IBaseResource loadPackageEntity(final NpmPackageVersionResourceEntity contents) {
+		try {
+			final var binary = MatchboxServerUtils.getBinaryFromId(contents.getResourceBinary().getId(), myDaoRegistry);
+			final byte[] resourceContentsBytes = MatchboxServerUtils.fetchBlobFromBinary(binary, myBinaryStorageSvc,
+																												  myCtx);
+			final String resourceContents = new String(resourceContentsBytes, StandardCharsets.UTF_8);
+			return CrossVersionResourceUtils.getHapiParser(MatchboxFhirFormat.JSON, contents.getFhirVersion())
+				.parseResource(resourceContents);
+		} catch (Exception e) {
+			throw new RuntimeException(Msg.code(1305) + "Failed to load package resource " + contents, e);
 		}
 	}
 
@@ -522,5 +474,4 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 																							 this.myCtx.getVersion().getVersion());
 		};
 	}
-
 }
